<resources>
    <string name="app_name">My Application</string>
    <string name="movie_storyline_label">Storyline</string>
    <string name="movie_pg">%d+</string>
    <string name="movie_reviews">%d reviews</string>
    <string name="movie_length">%d min</string>
    <string name="movie_release_date_format">MMM dd, yyyy</string>
    <string name="actor_birth_date_format">dd MMMM, yyyy</string>
    <string name="movie_avengers_title">Avengers: End Game</string>
    <string name="movie_avengers_pg">13+</string>
    <string name="movie_avengers_reviews">125 reviews</string>
    <string name="movie_avengers_tags">Action, Adventure, Fantasy</string>
    <string name="movie_avengers_storyline">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="avengers_movie_length">137 min</string>
    <string name="avengers_movie_release_date">Apr 25, 2019</string>
    <string name="movie_cast_label">Cast</string>
    <string name="tv_back_label">Back</string>
    <string name="movies_list_label">Movies list</string>
    <string name="tab_item_top_rated">Top Rated</string>
    <string name="tab_item_popular">Popular</string>
    <string name="tab_item_now_playing">Now Playing</string>
    <string name="tab_item_upcoming">Upcoming</string>
    <string name="movie_poster_content_description">Movie Poster</string>
    <string name="favorite_movie_description">Favorite movie description</string>
    <string name="movies_label">MOVIES</string>
    <string name="favorite_movies_label">FAVORITE</string>
    <string name="favorite_movies_title">Favorite Movies</string>
    <string name="unlike_button_label">Unlike</string>
    <string name="known_for_department_label">Known for department:</string>
    <string name="filmography_label">Filmography</string>
    <string name="biography_label">Biography</string>
    <string name="channel_movie_recommendation">Recommended movies</string>

    // transition names
    <string name="movie_poster_transition_name">movie_poster_%d</string>
    <string name="actor_poster_transition_name">actor_poster_%d</string>
    <string name="actor_movie_poster_transition_name">actor_movie_%d</string>
    <string name="movie_poster_details_transition_name">movie_poster_details</string>
    <string name="actor_poster_details_transition_name">actor_poster_details</string>
</resources>