<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/movie_details_scroll_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/movie_details_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:descendantFocusability="blocksDescendants"
        android:transitionName="@string/movie_poster_details_transition_name">

        <ImageView
            android:id="@+id/movie_poster"
            android:layout_width="match_parent"
            android:layout_height="@dimen/movie_poster_height"
            android:contentDescription="@string/movie_poster_content_description"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/avengers_poster" />

        <View
            android:id="@+id/movie_poster_mask"
            android:layout_width="match_parent"
            android:layout_height="@dimen/poster_gradient_size"
            android:background="@drawable/poster_bottom_gradient"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/movie_poster"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:visibility="visible" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_back"
            style="@style/back_text_view_style"
            android:layout_marginTop="@dimen/icon_back_margin_top"
            android:background="@android:color/transparent"
            android:text="@string/tv_back_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/movie_title"
            style="@style/movie_text_title_style"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:textSize="@dimen/poster_title_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/movie_poster"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movie_poster"
            tools:text="@string/movie_avengers_title" />

        <TextView
            android:id="@+id/movie_genres"
            style="@style/movie_genres_style"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:textSize="@dimen/movie_tags_text_size"
            app:layout_constraintEnd_toStartOf="@id/fab_like_movie"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movie_title"
            tools:text="@string/movie_avengers_tags" />

        <com.willy.ratingbar.ScaleRatingBar
            android:id="@+id/movie_rating"
            style="@style/ratingbar_style"
            android:layout_marginTop="@dimen/movie_rating_bar_margin"
            app:layout_constraintStart_toStartOf="@id/movie_genres"
            app:layout_constraintTop_toBottomOf="@id/movie_genres"
            app:srb_starHeight="@dimen/star_size"
            app:srb_starWidth="@dimen/star_size" />

        <TextView
            android:id="@+id/movie_reviews"
            style="@style/movie_reviews_text_style"
            android:layout_marginStart="@dimen/movie_reviews_margin"
            app:layout_constraintBottom_toBottomOf="@id/movie_rating"
            app:layout_constraintStart_toEndOf="@id/movie_rating"
            app:layout_constraintTop_toTopOf="@id/movie_rating"
            tools:text="@string/movie_avengers_reviews" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_like_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/default_margin"
            android:src="@drawable/ic_favorite_movies"
            android:theme="@style/ThemeOverlay.AppCompat.FloatingActionButton"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/movie_genres"
            tools:ignore="ContentDescription"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/movie_storyline_label"
            style="@style/accent_text_style"
            android:text="@string/movie_storyline_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movie_rating"
            tools:alpha="1.0" />

        <TextView
            android:id="@+id/movie_storyline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:alpha="0.75"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movie_storyline_label"
            tools:alpha="0.75"
            tools:text="@string/movie_avengers_storyline" />

        <TextView
            android:id="@+id/movie_cast_label"
            style="@style/accent_text_style"
            android:alpha="1.0"
            android:text="@string/movie_cast_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movie_storyline"
            tools:alpha="1.0" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/movie_cast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_margin"
            android:alpha="1.0"
            android:clipToPadding="false"
            android:nestedScrollingEnabled="true"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/default_margin"
            android:paddingTop="@dimen/cast_image_margin"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movie_cast_label"
            tools:alpha="1.0"
            tools:itemCount="4"
            tools:listitem="@layout/view_holder_actor" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>