<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="@dimen/favorite_movies_card_margin"
    android:background="@drawable/favorite_movie_poster_background"
    android:padding="@dimen/small_poster_padding">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/favorite_movie_poster"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="2:3"
        app:layout_constraintEnd_toEndOf="@id/middle_line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/favorite_movie_poster_image_view_style"
        tools:src="@drawable/avenger_small_poster" />

    <View
        android:layout_width="0dp"
        android:layout_height="128dp"
        android:background="@drawable/favorite_poster_bottom_gradient"
        app:layout_constraintBottom_toBottomOf="@id/favorite_movie_poster"
        app:layout_constraintEnd_toEndOf="@id/favorite_movie_poster"
        app:layout_constraintStart_toStartOf="@id/favorite_movie_poster" />

    <TextView
        android:id="@+id/movie_genres"
        style="@style/movie_genres_style"
        android:layout_marginStart="@dimen/small_poster_margin"
        android:layout_marginEnd="@dimen/small_poster_margin"
        android:layout_marginBottom="@dimen/small_poster_movie_genres_margin"
        android:textSize="@dimen/small_text_size"
        app:layout_constraintBottom_toTopOf="@id/movie_rating"
        app:layout_constraintEnd_toEndOf="@id/favorite_movie_poster"
        app:layout_constraintStart_toStartOf="@id/favorite_movie_poster"
        tools:text="@string/movie_avengers_tags" />

    <com.willy.ratingbar.ScaleRatingBar
        android:id="@+id/movie_rating"
        style="@style/ratingbar_style"
        android:layout_marginStart="@dimen/small_poster_margin"
        android:layout_marginBottom="@dimen/small_poster_ratingbar_bottom_margin"
        app:layout_constraintBottom_toBottomOf="@id/favorite_movie_poster"
        app:layout_constraintStart_toStartOf="@id/favorite_movie_poster"
        app:srb_starHeight="@dimen/small_star_size"
        app:srb_starWidth="@dimen/small_star_size" />

    <TextView
        android:id="@+id/movie_reviews"
        style="@style/movie_reviews_text_style"
        android:layout_marginStart="@dimen/small_poster_movie_reviews_margin"
        android:layout_marginEnd="@dimen/small_poster_margin"
        android:textSize="@dimen/small_text_size"
        app:layout_constraintBottom_toBottomOf="@id/movie_rating"
        app:layout_constraintStart_toEndOf="@id/movie_rating"
        app:layout_constraintTop_toTopOf="@id/movie_rating"
        tools:text="@string/movie_avengers_reviews" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/middle_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/movie_title"
        style="@style/movie_text_title_style"
        android:layout_width="0dp"
        android:layout_marginHorizontal="@dimen/favorite_movie_margin"
        android:layout_marginTop="@dimen/favorite_movie_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/middle_line"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/movie_avengers_title" />

    <TextView
        android:id="@+id/movie_length"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/gray_color"
        android:textSize="@dimen/movie_length_text_size"
        app:layout_constraintEnd_toEndOf="@id/movie_title"
        app:layout_constraintStart_toStartOf="@id/movie_title"
        app:layout_constraintTop_toBottomOf="@id/movie_title"
        tools:text="@string/avengers_movie_length" />

    <TextView
        android:id="@+id/movie_storyline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/favorite_movie_margin"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginBottom="@dimen/favorite_movie_margin"
        android:alpha="0.75"
        android:ellipsize="end"
        android:lines="7"
        android:textColor="@color/white"
        android:textSize="@dimen/favorite_movie_storyline_size"
        app:layout_constraintBottom_toTopOf="@id/unlike_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/middle_line"
        app:layout_constraintTop_toBottomOf="@id/movie_length"
        tools:text="@string/movie_avengers_storyline" />

    <Button
        android:id="@+id/unlike_button"
        android:layout_width="0dp"
        android:layout_height="@dimen/unlike_button_height"
        android:layout_marginHorizontal="@dimen/default_margin"
        android:layout_marginBottom="@dimen/unlike_button_bottom_margin"
        android:background="@drawable/unlike_button_background"
        android:text="@string/unlike_button_label"
        android:textAllCaps="false"
        android:textSize="@dimen/unlike_button_text_size"
        app:backgroundTint="@null"
        app:icon="@drawable/ic_favorite_movies"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/middle_line" />

</androidx.constraintlayout.widget.ConstraintLayout>